--- a/singolo1.css
+++ b/singolo1.css
@@ -1,5 +1,5 @@
 /* Fonts */
-@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900&display=swap&subset=latin-ext');
 
 
 body {
@@ -7,7 +7,7 @@ body {
     padding: 0;
 }
 
-ul, li {
+ul, li, h1, h2, p, pre {
     margin: 0;
     padding: 0;
     list-style: none;
@@ -26,8 +26,8 @@ a {
 
 .header {
    padding: 29px 0 30px 0;
-   border-bottom: 6px solid #323746;
    background-color: #2d303a; 
+   border-bottom: 6px solid #323746; 
 }
 
 .header__position {
@@ -58,43 +58,160 @@ a {
 .header__list:last-child {
     letter-spacing: -0.3px;
 }
+
 .header__item {
-    padding: 10px 0 0 31px;
+    display: flex;
+    align-items: center;
+    padding: 10px 0 0 15px;
     font-family: 'Lato', sans-serif;
     font-size: 12px;
     font-weight: bold;
     text-transform: uppercase;
 }
 
-.header__item a {
-    color: #ffffff;
+.header__item a:hover {
+    color: #f06c64;
 }
 
+.header__item a {
+    color: #ffffff;
+    transition: all 0.5s ease;
+}
+
+.header__dot {
+    padding: 0px 0px 0 11px;
+    display: block;
+    font-size: 8px;
+    color: #494e62;
+}
 /* Main */
 
+    /* Slider */
 
-.main__background {
-    background-image: url(./assets/Slider_bg.png);
-    background-position-y: -6px;
+.slider {
+    position: relative;
+    background-color: #f06c64;
     border-bottom: 6px solid #ea676b;
 }
 
-.main__list {
+.slider__verticalphone {
+    position: absolute;
+    top: 53px;
+    left: 112px;
+}
+
+.slider__horizontalphone {
+    position: absolute;
+    top: 174px;
+    left: 425px;
+}
+.slider__list {
     display: flex;
     justify-content: space-between;
 }
 
 .fa-chevron-left {
-    padding: 280px 0 283px 40px;
+    margin: 280px 0 283px 40px;
     font-size: 31px;
     color: #ca4549;
+    cursor: pointer;
+    transition: all 0.5s ease;
 }
 
 .fa-chevron-right {
-    padding: 280px 38px 283px 0px;
+    margin: 280px 38px 283px 0px;
     font-size: 31px;
     color: #ca4549;
+    cursor: pointer;
+    transition: all 0.5s ease;
+}
+
+.fa-chevron-left:hover {
+    filter: drop-shadow(0px 0px 4px #ffdad8);
+}
+
+.fa-chevron-right:hover {
+    filter: drop-shadow(0px 0px 4px #ffdad8);
 }
 
 
+    /* Info */
+    
+    .info {
+        margin: 0;
+        padding: 59px 40px 62px;   
+        border-bottom: 6px solid #ffffff;     
+        background-color: #f2f2f2;
+    }
+
+    .info__title {
+        font-family: 'Lato', sans-serif;
+        font-size: 30px;
+        font-weight: 900;
+        letter-spacing: -0.2px;
+        color: #666d89;
+    }
+
+    .info__description {
+        padding: 18px 0 0 0;
+        font-family: 'Lato', sans-serif;
+        font-size: 18px;
+        font-weight: 100;
+        text-align: justify;
+        letter-spacing: 0px;
+        line-height: 30px;
+        color: #767e9e;
+    }
+
+    .info__list {
+        display: flex;
+        flex-direction: column;
+        padding: 43px 0 0 0;
+    }
+
+    .info__line:last-child {
+        padding: 30px 0 0 0;
+    }
+
+    .info__line {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    } 
+
+    .info__icon {
+        height: fit-content;
+        padding: 4px 0 0 1px;
+    }
+
+    .info__item {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .info__article {
+        display: flex;
+        flex-direction: column;
+        padding: 0 0 0 20px;
+    }
+
+    .article__title {
+        font-family: 'Lato', sans-serif;
+        font-size: 18px;
+        font-weight: 900;
+        padding: 0px 0 8px 0;
+        letter-spacing: -0.1px;
+        color: #666d89;
+    }
+
+    .article__text {
+        max-width: 220px;
+        font-family: 'Lato', sans-serif;
+        font-size: 12px;
+        font-weight: 500;
+        line-height: 21px;
+        letter-spacing: -0.09px;
+        text-align: justify;
+        color: #767e9e;
+    }
 
