--- a/singolo2.css
+++ b/singolo2.css
@@ -6,7 +6,7 @@ body {
     padding: 0;
 }
 
-ul, li, h1, h2, p, pre {
+ul, li, h1, h2, h3, p, pre {
     margin: 0;
     padding: 0;
     list-style: none;
@@ -21,16 +21,15 @@ a {
     margin: auto;
 }
 
+.position {
+    padding: 60.4px 40px 48px;
+}
+
 /* Portfolio */
 
 .portfolio {
     background-color: #2d303a;
     border-bottom: 6px solid #323746;
-}
-
-
-.portfolio_position {
-    padding: 60.4px 40px 48px;
 }
 
 .portfolio__title {
@@ -69,6 +68,8 @@ a {
     transform: scaleY(0.85);
     color: #666d89;
     background-color: transparent;
+    cursor: pointer;
+    transition: 0.2s ease-in;
 }
 
 .portfolio__button:nth-child(2) {
@@ -79,6 +80,11 @@ a {
 .portfolio__button:nth-child(3) { 
     letter-spacing: -0.3px;
     word-spacing: -1.4px;
+}
+
+.portfolio__button:hover {
+    border-color: #dedede;
+    color: #dedede;
 }
 
 .portfolio__gallery {
@@ -93,4 +99,171 @@ a {
 
 .gallery__item {
     padding: 0 0 16px 0px;
+}
+
+/* About us */
+
+.about-us {
+    background-color: #f2f2f2;
+    padding: 0 0 20px 0;
+    border-bottom: 6px solid #ffffff;
+}
+.about-us__title {
+    font-family: 'Lato';
+    font-size: 30px;
+    font-weight: 800;
+    color: #666d89;
+    letter-spacing: -0.2px;
+}
+
+.about-us__description {
+    padding: 17px 0 0 0;
+    font-family: 'Lato';
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 31px;
+    text-align: justify;
+    color: #767e9e;
+}
+
+.about-us__staff {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;  
+    padding: 44px 0 0 0;  
+}
+
+.staff__item {
+    display: flex;
+    flex-direction: column;
+}
+
+.staff__name {
+    padding: 16px 0 0 0px;
+    font-family: 'Lato';
+    font-weight: 700;
+    letter-spacing: -0.1px;
+    color: #656d89;
+}
+
+.staff__name h3 {
+    font-size: 18px;
+}
+
+.staf__contact {
+    display: flex;
+    flex-direction: row; 
+    padding: 27px 0 0 0;   
+}
+
+.staf__description[title='human1'] {    
+    max-width: 300px;    
+    padding: 11px 0 0 0;
+    font-family: 'Lato';
+    font-size: 12px;
+    font-weight: 400;
+    letter-spacing: -0.2px;
+    word-spacing: 0.3px;
+    color: #767e9e;
+}
+
+.staf__description[title='human2'] {    
+    max-width: 300px;    
+    padding: 11px 0 0 0;
+    font-family: 'Lato';
+    font-size: 12px;
+    font-weight: 400;
+    word-spacing: 1px;
+    color: #767e9e;
+}
+
+.staf__description[title='human3'] {    
+    max-width: 300px;    
+    padding: 11px 0 0 0;
+    font-family: 'Lato';
+    font-size: 12px;
+    font-weight: 400;
+    letter-spacing: 0.01px;
+    word-spacing: 0.25px;
+    color: #767e9e;
+}
+
+.staf__description span[title='human1'] {
+    display: block;
+    padding: 6px 0 0 0;
+    letter-spacing: -0.2px;
+    word-spacing: 0.9px;
+}
+
+.staf__description span[title='human2'] {
+    display: block;
+    padding: 6px 0 0 0;
+    word-spacing: -0.4px;
+}
+
+.staf__description span[title='human3'] {
+    display: block;
+    padding: 6px 0 0 0;
+    letter-spacing: -0.2px;
+    word-spacing: 1px;
+}
+
+.contact__item {
+    width: 31px;
+    height: 31px;
+    box-sizing: border-box;
+    border: 1px solid #656d89;
+    border-radius: 50%;
+    margin: 1px 9px 0 0px;
+    cursor: pointer;
+    transition: 0.2s ease-in;
+}
+
+.contact__item:hover {
+    border-width: 2px;
+    transform: scale(1.01);
+}
+
+.contact__link{
+    font-size: 12px;
+    color: #656d89;
+}
+
+.contact__facebook::before {
+    content: "\f39e";
+    position: relative;
+    top: 6px;
+    left: 11px;
+    font-family: 'FontAwesome';
+    font-size: 13px;
+    color: #656d89;
+}
+
+
+.contact__google {
+    position: relative;
+    top: 8px;
+    left: 8px;
+    font-size: 12px;
+    color: #656d89;
+}
+
+.contact__twitter::before {
+    content: "\f099";
+    position: relative;
+    top: 7px;
+    left: 8px;
+    font-family: 'FontAwesome';
+    font-size: 14px;
+    color: #656d89;
+}
+
+.contact__linkedin::before {
+    content: "\f0e1";
+    position: relative;
+    top: 7px;
+    left: 8px;
+    font-family: 'FontAwesome';
+    font-size: 15px;
+    color: #656d89;
 }
