--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 /* Fonts */
 @import url("https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900&display=swap&subset=latin-ext");
 
+@font-face {
+  font-family: "Lato_ru";
+  src: url(./assets/Lato_ru.ttf);
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -410,6 +415,11 @@ a {
 
 /* Portfolio */
 
+.position-portfolio {
+  padding: 60px 0px 53px;
+  margin: 0px 35px;
+}
+
 .portfolio {
   background-color: #2d303a;
   border-bottom: 6px solid #323746;
@@ -417,6 +427,7 @@ a {
 }
 
 .portfolio__title {
+  padding: 0 0 0 4px;
   font-family: "Lato";
   font-size: 30px;
   font-weight: 800;
@@ -425,15 +436,16 @@ a {
 }
 
 .portfolio__description {
-  padding: 21px 0 0 0;
+  padding: 21px 0 0 5px;
   font-family: "Lato";
   font-size: 18px;
   font-weight: 300;
+  text-align: justify;
   color: #767e9e;
 }
 
 .portfolio__nav {
-  padding: 14px 0 18px 1px;
+  padding: 15px 0px 13px 6px;
   max-width: 289px;
 }
 .portfolio__navigation {
@@ -473,7 +485,6 @@ a {
 
 .portfolio__gallery {
   display: flex;
-  max-width: 940px;
   flex-direction: row;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -482,9 +493,16 @@ a {
 }
 
 .gallery__item {
-  padding: 0 0 16px 0px;
+  box-sizing: border-box;
+  padding: 5px 5px 11px 5px;
+  cursor: pointer;  
 }
 
+.gallery_item-active {
+  -webkit-box-shadow: 0px 0px 0px 5px rgba(240,108,100,1);
+  -moz-box-shadow: 0px 0px 0px 5px rgba(240,108,100,1);
+  box-shadow: 0px 0px 0px 5px rgba(240,108,100,1);
+}
 
 
 
@@ -657,7 +675,7 @@ a {
 /* Quote */
 
 .position__quote {
-  padding: 59.6px 40px 13px;
+  padding: 60px 40px 13px;
 }
 
 .quote {
@@ -685,6 +703,7 @@ a {
 
 .quote__email-contact {
   display: flex;
+  position: relative;
   flex-direction: row;
   justify-content: space-between;
   padding: 25px 0 0 0;
@@ -742,8 +761,10 @@ a {
   border-radius: 6px;
   font-family: "Lato";
   font-size: 12px;
+  text-align: center;
   background-color: #d6564f;
   color: #f48c8f;
+  cursor: pointer;
 }
 
 .quote__contact {
@@ -810,6 +831,67 @@ a {
 .quote__item:nth-of-type(4) {
   letter-spacing: -0.1px;
 }
+
+/* Message */
+
+.quote__message {
+  display: none;
+  position: absolute;
+  left: 30%;
+  min-width: 250px;
+  max-width: 300px;
+  min-height: 80px;
+  padding: 10px;
+  border: 0px solid;
+  border-radius: 14px;
+  font-family: "Lato_ru";  
+  color: #ffffff;
+  background-color: #2d303a; 
+  box-shadow: 0px 0px 19px 5px #ffdad8c2
+}
+
+.quote__message-active {
+  display: block !important;
+}
+
+.message_status {
+  padding: 5px;
+  margin: 0 0 10px 0;
+  border: 0px solid;
+  border-radius: 8px;
+  word-wrap: break-word;
+  background-color: #595e6e; 
+}
+
+.message_theme {
+  padding: 5px;
+  margin: 0 0 10px 0;
+  border: 0px solid;
+  border-radius: 8px;  
+  word-wrap: break-word;
+  background-color: #595e6e;
+}
+
+.message_describe {
+  padding: 5px;
+  margin: 0 0 10px 0;  
+  border: 0px solid;
+  border-radius: 8px;  
+  word-wrap: break-word;
+  background-color: #595e6e;
+}
+
+.message_close {
+  padding: 3px 16px;
+  margin: 0 40%;
+  border: 0px solid;  
+  border-radius: 16px;
+  font-family: "Lato_ru";
+  background-color: #f06c64;  
+  cursor: pointer;
+}
+
+
 
 /* Footer */
 
